--- a/src/componentes/Envios/Envios.css
+++ b/src/componentes/Envios/Envios.css
@@ -27,3 +27,14 @@
     height: 80px;
 }
 
+@media (max-width:1100px) {
+    .medios-envios{
+        letter-spacing: 0.2rem;
+        font-size: 1.8rem;
+    }
+    .contenedor-envios{
+        margin-top: 10px;
+    }
+    
+}
+
