--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -7,7 +7,9 @@ header {
     background-color: #006db6;
     height: 6.5rem;
     padding: 5px 5%;
-} 
+    position: fixed;
+    top: 0;
+}
 
 
 header h1 {
@@ -28,24 +30,97 @@ li {
     transition: 0.5s;
 
 }
+
 li:hover {
     border-radius: 10px;
     background-color: #00A2E8;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .7);
 }
 
-.navlink{
+.navlink {
     text-decoration: none;
     color: white;
 }
 
-img{
-padding-top: 1rem;
+img {
+    padding-top: 1rem;
 }
 
-@media (max-width:1100px){
-    li{
-        margin: 1.0rem 0.5rem;
+
+/*NavBar*/
+
+.btn-abrir {
+    display: none;
+}
+
+.btn-abrir.oculto{
+    display: none;
+}
+
+.btn-cerrar {
+    display: none;
+}
+
+@media (max-width:1100px) {
+    li {
+        margin: 0.8rem 0.3rem;
     }
 }
 
+@media screen and (max-width : 768px) {
+
+    .btn-abrir {
+        display: block;
+    }
+
+    .btn-cerrar {
+        display: block;
+
+    }
+    
+    nav {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: #006db6;
+        padding: 0.5rem;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        display: none;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .visible {
+        opacity: 1;
+        visibility: visible;
+        display: flex !important;
+        height: 100vh;
+        background-color: #006db6;
+
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 30px;
+        padding-top: 2rem;
+    }
+
+    .btn-abrir{
+        border: 0;
+        font-size: 1.7rem;
+        cursor: pointer;
+        padding-left: 2rem;
+        
+    }
+    .btn-cerrar{
+        border: 0;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+}
