--- a/src/componentes/ItemDetail/ItemDetail.css
+++ b/src/componentes/ItemDetail/ItemDetail.css
@@ -86,5 +86,38 @@
 
     .div-contenedor {
         max-width: 1100px;
+        padding-top: 20px;
+    }
+}
+
+@media (max-width:768px){
+    .item-detail{
+        max-width: 300px;
+        height: 45vh;
+    }
+    .img-detail{
+        max-width: 250px;
+        height: 45vh;
+    }
+    .div-contenedor{
+        max-width: 768px;
+        padding-top: 30px;
+    }
+    .nombre-detail{
+    font-size: 1.5rem;
+    }
+}
+
+@media(max-width:576px){
+    .div-contenedor{
+        display: flex;
+        flex-direction: column;
+    }
+    .img-detail{
+        max-width: 576px;
+    }
+    .item-detail{
+        max-width: 576px;
+        margin: 20px;
     }
 }
