--- a/src/componentes/CheckOut/CheckOut.css
+++ b/src/componentes/CheckOut/CheckOut.css
@@ -1,8 +1,9 @@
 .contenedor-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 100px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    padding-top: 130px;
+    /* align-items: center; */
+    display: inline block;
 }
 
 .form-group {
@@ -10,6 +11,7 @@
     flex-direction: column;
     gap: 20px;
     padding-top: 50px;
+    align-items: center;
 }
 
 .input-container {
