--- a/src/componentes/ItemDetail/ItemDetail.css
+++ b/src/componentes/ItemDetail/ItemDetail.css
@@ -47,10 +47,14 @@
 }
 
 .id-detail {
-    font-size: 1.3rem;
+    font-size: 1rem;
     text-align: center;
-    margin-top: 1rem;
     font-weight: 500;
+}
+.stock-detail{
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-top: 1rem;
 }
 
 .link-productos {
