--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -103,37 +103,41 @@
         margin-left: 2rem;
     }
 
-    h4{
+    h4 {
         font-size: 0.9rem;
     }
 }
-@media (max-width:768px){
-    .contenedor-cart{
+
+@media (max-width:768px) {
+    .contenedor-cart {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-    .total{
+
+    .total {
         font-size: 2.6rem;
     }
-    .cantidad-total{
+
+    .cantidad-total {
         font-size: 1rem;
     }
-    .link-finalizar{
+
+    .link-finalizar {
         font-size: 1.3rem;
         width: 300px;
     }
 
 }
 
-
-@media (max-width:576px){
+@media (max-width:576px) {
     .contenedor-cart {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
         padding-top: 20px;
     }
-    .total{
+
+    .total {
         font-size: 2.3rem;
     }
 
@@ -141,12 +145,14 @@
         font-size: 1rem;
         width: 260px;
     }
-    .btn-vaciar{
+
+    .btn-vaciar {
         width: 150px;
         font-size: 0.8rem;
     }
-    .cantidad-total{
+
+    .cantidad-total {
         font-size: 1rem;
     }
-    
+
 }
