--- a/src/componentes/ItemList/ItemList.css
+++ b/src/componentes/ItemList/ItemList.css
@@ -1,20 +1,20 @@
-.contenedor-productos{
+.contenedor-productos {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin: 40px 20px;
 }
 
-@media (max-width:1100px){
-    .contenedor-productos{
+@media (max-width:1100px) {
+    .contenedor-productos {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
 }
 
-@media (max-width:768px){
-    .contenedor-productos{
+@media (max-width:768px) {
+    .contenedor-productos {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 }
